--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 	<head>
 		<meta charset="utf-8">
-		<title>Title</title>
+		<title>My Pet Rat</title>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="styles.css">
 		<script src="processing.js"></script>
 	</head>
 	<body>
 		<header>
-			<h1>Headline</h1>
+			<h1>Drawing of Pet Rat</h1>
 		</header>
 			<section id="content">
 				<canvas id="VirtualPet" data-processing-sources="VirtualPet.pde">
 				</canvas>
 		    </section>
 	    <footer>
-		    Footer
+		    Tool used: Processing
 	    </footer>
 	</body>
 </html>
